[package]
name = "hello-world-dll"
version = "0.1.0"
authors = ["Michael Lamparski <diagonaldevice@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.8", features = ["winuser", "processthreadsapi"] }
